# txWeb

./: .coveragec  .gitattributes  .gitignore  .pylintrc  CHANGELOG.txt  README.md  dev_requirements.txt  example.py  grunner.py  journal.txt  lint.bat  main.py  make.bat  min_requirements.txt  pytest.ini  requirements.txt  runner.py  setup.cfg  setup.py  test.bat  test_w_cover.sh  testing_requirements.txt  watch_manual.bat  watch_test.bat
cover/: index.html  txweb.html  txweb_core.html  txweb_sugar.html  txweb_sugar_filters.html  txweb_sugar_reloader.html  txweb_sugar_smartcontroller.html  txweb_util.html  txweb_util_arghelper.html  txweb_util_basic.html  txweb_util_is_a.html  txweb_util_param_dict.html
examples/async_t3/: play.py
examples/chat/: chat.js  home.html  index.html  script.js  server.py
examples/forms/: index.html  main.html  server.py
source/: conf.py  index.rst
tests/: helper.py  test_compiled_site.py  test_core.py  test_custom_request_class.py  test_error_handling.py  test_prepostfilters.py  test_python_classdef.py  test_python_proof_of_concept.py  test_redirecting.py  test_resources_directory.py  test_resources_routing.py  test_resources_simple_file_SimpleFile.py  test_routable_classes.py  test_smartcontroller.py  test_static_file_resource.py  test_util_str_request.py  test_views.py
txweb/: __init__.py  application.py  core.py  errors.py  http_codes.py  log.py  resources.py  site.py  test_core.py  test_site.py  util.py  view_class_assembler.py  web_csite.py  web_site.py  web_views.py
txweb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+149 files in other folders)
