[aliases]
test=pytest


[metadata]
name = Texas web
version = 0.2020.11
description = An overlay/extension to twisted.web
author = DevDave
author_email = devdave@ominian.net
url = "https://github.com/devdave/txWeb"
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8